generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id           Int       @id @default(autoincrement())
  email        String    @unique
  passwordHash String
  name         String?
  expenses     Expense[]
  createdAt    DateTime  @default(now())
}

model Category {
  id       Int       @id @default(autoincrement())
  name     String    @unique
  expenses Expense[]
}

model Expense {
  id          Int      @id @default(autoincrement())
  amount      Float
  description String?
  date        DateTime
  userId      Int
  categoryId  Int
  user        User     @relation(fields: [userId], references: [id])
  category    Category @relation(fields: [categoryId], references: [id])
  createdAt   DateTime @default(now())
}
